<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.example.adidaschallenge.fragments.ProductDetailsFragment">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/product_image_description"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_margin_5dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin_5dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@+id/product_image"
            tools:layout_editor_absoluteX="5dp" />

        <TextView
            android:id="@+id/description_text"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_product"
            tools:text="Description" />

        <TextView
            android:id="@+id/price_text"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/name_product"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Price" />

        <TextView
            android:id="@+id/name_product"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="@string/product" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_margin_5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:minHeight="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/add_review_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_title">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_list"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/empty_reviews_text"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_review_text"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>


        <Button
            android:id="@+id/add_review_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_review"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reviews_title"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/customer_reviews"
            android:textSize="@dimen/large_text_24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
